# clDES

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  benchmark.cpp  benchmark_FULLLAZYclustertool5.cpp  benchmark_FULLLAZYclustertool6.cpp  benchmark_FULLLAZYclustertool7.cpp  benchmark_FULLLAZYfsm.cpp  benchmark_clustertool.cpp  benchmark_clustertool2.cpp  benchmark_clustertool3.cpp  benchmark_clustertool4.cpp  benchmark_clustertool5.cpp  benchmark_clustertool6.cpp  benchmark_clustertool7.cpp  benchmark_fsm.cpp  benchmark_gpu_clustertool2.cpp  benchmark_gpu_clustertool6.cpp  benchmark_gpu_clustertool7.cpp  benchmark_gpu_fsm.cpp  benchmark_lazyclustertool6.cpp  benchmark_lazyclustertool7.cpp  benchmark_lazyfsm.cpp  clustertool.hpp  clustertools.cpp  clustertools.hpp  testlib.hpp
cldes/: DESystem.hpp  DESystemCore.hpp  TransitionProxy.hpp  cldes.hpp  constants.hpp  desystem.hpp  transition_proxy.hpp
cldes/backend/: OCLBackend.hpp  oclbackend.hpp
cldes/operations/: Operations.hpp  OperationsCore.hpp  SyncSysProxy.hpp  operations.hpp
cldes/src/backend/: OCLBackendCore.hpp
cldes/src/des/: DESystemCore.hpp  TransitionsProxyCore.hpp
cldes/src/operations/: OperationsCore.hpp  SyncSysProxyCore.hpp
doc/: CMakeLists.txt  Doxyfile.in
doc/html/: Constants_8hpp_source.html  DESystemBaseCore_8hpp_source.html  DESystemBaseFwd_8hpp_source.html  DESystemBase_8hpp.html  DESystemBase_8hpp__dep__incl.map  DESystemBase_8hpp__dep__incl.md5  DESystemBase_8hpp__incl.map  DESystemBase_8hpp__incl.md5  DESystemBase_8hpp_source.html  DESystemCLCore_8hpp_source.html  DESystemCLFwd_8hpp_source.html  DESystemCL_8hpp_source.html  DESystemCore_8hpp.html  DESystemCore_8hpp__dep__incl.map  DESystemCore_8hpp__dep__incl.md5  DESystemCore_8hpp_source.html  DESystemFwd_8hpp_source.html  DESystem_8hpp.html  DESystem_8hpp__dep__incl.map  DESystem_8hpp__dep__incl.md5  DESystem_8hpp__incl.map  DESystem_8hpp__incl.md5  DESystem_8hpp_source.html  EventsSet_8hpp_source.html  OclBackendCore_8hpp_source.html  OclBackend_8hpp_source.html  OperationsCLCore_8hpp_source.html  OperationsCL_8hpp_source.html  OperationsCore_8hpp_source.html  OperationsFwd_8hpp_source.html  Operations_8hpp_source.html  SyncSysProxyCore_8hpp.html  SyncSysProxyCore_8hpp__dep__incl.map  SyncSysProxyCore_8hpp__dep__incl.md5  SyncSysProxyCore_8hpp_source.html  SyncSysProxyFwd_8hpp_source.html  SyncSysProxy_8hpp.html  SyncSysProxy_8hpp__dep__incl.map  SyncSysProxy_8hpp__dep__incl.md5  SyncSysProxy_8hpp__incl.map  (+66 more)
doc/html/search/: all_0.js  all_1.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  classes_0.js  classes_1.js  classes_2.js  files_0.js  files_1.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  related_0.js  related_1.js  related_2.js  searchdata.js  typedefs_0.js  typedefs_1.js  typedefs_2.js  typedefs_3.js  typedefs_4.js  typedefs_5.js  typedefs_6.js  typedefs_7.js  variables_0.js  (+3 more)
examples/: CMakeLists.txt  basics.cpp
examples/OpenCL/: CMakeLists.txt
include/: clDESConfig.h.in  cldes.hpp  constants.hpp
include/DES/: desystem.hpp
include/backend/: kernels.cl  kernels.hpp  matrop.hpp  oclbackend.hpp
include/cldes/: Constants.hpp  DESystem.hpp  DESystemCL.hpp  EventsSet.hpp  TransitionProxy.hpp  constants.hpp
include/cldes/operations/: Operations.hpp
include/cldes/src/backend/: OCLBackendCore.hpp
include/cldes/src/des/: DESystemCore.hpp  TransitionsProxyCore.hpp
include/cldes/src/operations/: OperationsCore.hpp
include/des/: desystem.hpp  desystemcl.hpp  transition_proxy.hpp
include/operations/: operations.hpp
include/utils/: oclbackend.hpp
libcldes/cldes/: Constants.hpp  DESystem.hpp  DESystemBase.hpp  DESystemCL.hpp  EventsSet.hpp  GenericSystem.hpp  TransitionProxy.hpp
libcldes/cldes/backend/: OclBackend.hpp  kernels.cl
libcldes/cldes/operations/: Operations.hpp  OperationsCL.hpp  SuperProxy.hpp  SyncSysProxy.hpp
libcldes/cldes/src/backend/: OclBackendCore.hpp
libcldes/cldes/src/des/: DESystemBaseCore.hpp  DESystemBaseFwd.hpp  DESystemCLCore.hpp  DESystemCLFwd.hpp  DESystemCore.hpp  DESystemFwd.hpp  TransitionsProxyCore.hpp
libcldes/cldes/src/operations/: OperationsCLCore.hpp  OperationsCore.hpp  OperationsFwd.hpp  SuperProxyCore.hpp  SuperProxyFwd.hpp  SyncSysProxyCore.hpp  SyncSysProxyFwd.hpp
src/: CMakeLists.txt  desystem.cpp  desystemcl.cpp  fastDES.cpp  matrop.cpp  ocl-SparseMatrixMul.cl  oclbackend.cpp  operations.cpp  transition_proxy.cpp
tests/: CMakeLists.txt  basics.cpp  basics_gpu.cpp  clustertool.hpp  ct2.cpp  direct_sync.cpp  direct_sync_cpu.cpp  fulllazy_ct5.cpp  lazy_fsm.cpp  matrop.cpp  projection_cpu.cpp  superproxy.cpp  supervisorsynth_cpu.cpp  sync.cpp  sync_cpu.cpp  sync_supervisorsynth_cpu.cpp  testlib.hpp  ublas_basics.cpp
